apps/datalake-metrics/manifests/custom/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: thanos-receive-ingress-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: thanos-receive-nginx
  namespace: datalake-metrics
spec:
  ingressClassName: nginx
  rules:
  - host: metrics.datalake.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: thanos-receive-router
            port:
              name: remote-write
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - metrics.datalake.ankhmorpork.thaum.xyz
    secretName: thanos-receive-ingress-tls
