apps/datalake-metrics/manifests/custom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: datalake-metrics-basicauth@kubernetescrd
  name: thanos-receive
  namespace: datalake-metrics
spec:
  ingressClassName: traefik
  rules:
  - host: metrics.datalake.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: thanos-receive-router
            port:
              name: remote-write
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - metrics.datalake.ankhmorpork.thaum.xyz
    secretName: thanos-receive-ingress-tls
